--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         Watch lesson videos
                     </span>
                     <span class="sub-title">
-                        Learn Web Development in 6 Weeks
+                        Guitar Like a Pro in 6 Weeks
                     </span>
                 </div>
             </div>
@@ -59,7 +59,7 @@
         <div class="banner-content">
             <div class="wrapper">
                 <span class="title">Our Lessons</span>
-                <span class="sub-title">Are Easy Yet Comprehensive</span>
+                <span class="sub-title">Are Easy & Comprehensive</span>
                 <ul>
                     <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
                     <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
