color functions added

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             <div class="wrapper">
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
                     <li><a href="#">Lessons</a></li>
-                    <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Blog</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">About Us</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </div>
@@ -45,7 +45,7 @@
                 </li>
                 <li>
                     <img src="img/icon-2.png" alt="icon 2">
-                    <a href="#">Download<br />Certificate</a>
+                    <a href="#">Printed<br />Certificate</a>
                 </li>
                 <li>
                     <img src="img/icon-3.png" alt="icon 3">
