media query mixin created

--- a/index.html
+++ b/index.html
@@ -87,5 +87,36 @@
             </ul>
         </div>
     </section>
+    <footer>
+            <h2>Contact Me</h2>
+            <div class="contact__list">
+                <div class="contact__email">
+                    <i class="fas fa-envelope"></i> Email
+                    <div class="text-secondary">abrian130@gmail.com</div>
+                </div>
+                <div class="contact__phone">
+                    <i class="fas fa-mobile-alt"></i> Mobile
+                    <div class="text-secondary">+233543399644</div>
+                </div>
+                <div class="contact__address">
+                    <i class="fas fa-envelope"></i> Address
+                    <div class="text-secondary">Biolgy Dept. KNUST, Kumasi-Ghana</div>
+                </div>
+            </div>
+            <div class="social-icons">
+                <a href="https://twitter.com/home">
+                    <i class="fab fa-twitter fa-2x"></i>
+                </a>
+                <a href="https://web.facebook.com/?_rdc=1&_rdr">
+                    <i class="fab fa-facebook fa-2x"></i>
+                </a>
+                <a href="https://github.com/Brian-code23">
+                    <i class="fab fa-github fa-2x"></i>
+                </a>
+            </div>
+            &copy; Copyright 2020, CodeRoom
+    </footer>
+
+    <script src="https://kit.fontawesome.com/d0c096c338.js" crossorigin="anonymous"></script>
 </body>
 </html>
