footer styles added

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </section>
     <footer>
             <h2>Contact Me</h2>
-            <div class="contact__list">
+            <div class="contact">
                 <div class="contact__email">
                     <i class="fas fa-envelope"></i> Email
                     <div class="text-secondary">abrian130@gmail.com</div>
